--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Spectral+SC:400,800');
+@import url('https://fonts.googleapis.com/css?family=MedievalSharp');
 
 body {
     background: black;
@@ -42,7 +43,7 @@ body {
     margin: 15px auto;
     width: 900px;
     padding: 15px 0 45px 0;
-    background-image: url('./img/Woodbackground.jpg');
+    background-image: url('./img/wood2.jpg');
 }
 
 .top {
@@ -61,7 +62,7 @@ body {
     display: flex;
     flex-direction: column;
     margin: 20px auto;
-    background: #e8e4c1;
+    background: rgba(218, 197, 182, 0.75);
     border-radius: 25px;
 }
 
@@ -72,7 +73,7 @@ body {
     max-width: 35%;
     min-width: 300px;
     margin: 20px auto;
-    background: #e8e4c1;
+    background: rgba(218, 197, 182, 0.75);
     border-radius: 25px;
 }
 
@@ -126,8 +127,8 @@ body {
     justify-content: center;
 }
 
-.graveyard {
-    min-width: 115px;
+#graveyard {
+    min-width: 100px
 }
 
 #color {
@@ -135,8 +136,8 @@ body {
     border-radius: 15px;
     min-width: 15px;
     margin: 5px;
-    border: 2px solid white
 }
+
 
 #colorhead {
     height: 15px;
@@ -185,6 +186,14 @@ button:hover {
     height: auto;
 }
 
+#button {
+    color: rgb(151, 23, 21);
+    font-size: 50px;
+    background: rgba(255, 255, 255, 0);
+    font-weight: 800;
+    font-family: 'MedievalSharp';
+}
+
 /* =============================================== */
 h1 {
     font-weight: 800;
@@ -206,4 +215,20 @@ h3 {
     font-size: 15px;
     margin: 15px 0;
     color: black;
+}
+
+h4 {
+    font-weight: 800;
+    font-size: 25px;
+    margin: 15px 0;
+    color: white;
+    font-family: 'MedievalSharp';
+    position: relative;
+    left: 123px;
+    top: 90px;
+    text-shadow:
+        -1px -1px 0 #000,
+        1px -1px 0 #000,
+        -1px 1px 0 #000,
+        1px 1px 0 #000; 
 }
