--- a/src/App.css
+++ b/src/App.css
@@ -78,9 +78,10 @@ body {
 }
 
 .input {
-    max-width: 60px;
-    min-width: 60px;
+    max-width: 50px;
+    min-width: 50px;
     margin: 2px 5px;
+    text-align: center;
 }
 
 .counter {
@@ -112,13 +113,13 @@ body {
 
 #inputName {
     min-width: 150px;
+    text-align: left;
 }
 
 .fighter {
     display: flex;
     align-items: center;
     justify-content: center;
-    border-radius: 15px;
     margin: 2px 0;
 }
 
@@ -128,7 +129,7 @@ body {
 }
 
 #graveyard {
-    min-width: 100px
+    min-width: 110px
 }
 
 #color {
@@ -192,6 +193,60 @@ button:hover {
     background: rgba(255, 255, 255, 0);
     font-weight: 800;
     font-family: 'MedievalSharp';
+}
+
+.workspace {
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
+}
+
+.modalOuter {
+    position: relative;
+    background-image: url("./img/ToP.png");
+    margin: -20px;
+    width: 444px;
+    height: 460px;
+}
+
+.modalInner {
+    position: absolute;
+    left: 147px;
+    top: 155px;
+    background: rgba(218, 197, 182, .75);
+    width: 150px;
+    height: 150px;
+    border-radius: 15px;
+    text-align: center;
+    padding: 15px;
+}
+
+#modalInput {
+    margin-top: 15px;
+    max-width: 100px;
+    background: rgba(255, 255, 255, 0.75);
+    border-radius: 5px;
+    font-weight: 800;
+    font-size: 15px;
+    color: rgb(151, 23, 21)
+}
+
+#modalWord {
+    color: rgb(179, 45, 0);
+    font-weight: 800;
+}
+
+.outModalNew {
+    display: flex;
+    background: rgba(218, 197, 182, .75);
+    margin: -20px;
+}
+
+.modalBanner {
+    background-image: url('./img/AddNew.png');
+    height: 401px;
+    width: 1000px;
+    background-repeat: no-repeat;
 }
 
 /* =============================================== */
