--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,7 @@ body {
     margin: 15px auto;
     width: 900px;
     padding: 15px 0 45px 0;
-    background-image: url('./img/wood2.jpg');
+    background-image: url('./img/Wood1.jpg');
 }
 
 .top {
@@ -103,7 +103,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    width: 20vw;
+    min-width: 325px;
 }
 
 .addNew {
