--- a/src/App.css
+++ b/src/App.css
@@ -326,12 +326,14 @@ button:hover {
 }
 
 .statusInner {
-    background: rgba(252, 227, 210, 0.75);
+    background: rgba(218, 197, 182, 0.75);
     padding: 10px 10px 5px 10px;
     min-width: 125px;
     text-align: center;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
     margin: 0 15px;
 }
 
